# chutes-omnivocal-public

./: .gitignore  LICENSE  Makefile  QUICKSTART.sh  README.md  READMEFORHUMANS.md  config.example.toml  pyproject.toml
src/omnivocal/: api.py  audio.py  cli.py  config.py  ui.py
tests/: __init__.py  test_api.py  test_cli.py  test_config.py
